--- a/CLI_Snake/CLI_Snake.csproj
+++ b/CLI_Snake/CLI_Snake.csproj
@@ -44,13 +44,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Directions.cs" />
+    <Compile Include="Direction.cs" />
     <Compile Include="Fruit.cs" />
     <Compile Include="IGameObject.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
     <Compile Include="UpdateMethods.cs" />
   </ItemGroup>
   <ItemGroup>
