--- a/CLI_Snake/CLI_Snake.csproj
+++ b/CLI_Snake/CLI_Snake.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Rectangle.cs" />
+    <Compile Include="SnakeTailPart.cs" />
     <Compile Include="UpdateMethods.cs" />
   </ItemGroup>
   <ItemGroup>
